@@ -1,6 +1,7 @@
 2004-04-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-file.c: s/definitively/permanently, from cs_is@yahoo.com.
+	* dialogs/gedit-close-confirmation-dialog.c: use ngettext, bug #134458.
 
 2004-04-04  Paolo Borelli  <pborelli@katamail.com>
 
